ruby: add new task 'retrieve' and 'test2'

--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -6,10 +6,25 @@
 
 task :default => :test
 
+desc "do test"
 task :test do
   Dir.glob("test/*").each do |fpath|
     #sh "ruby -I lib #{fpath}"
     puts "## load(#{fpath.inspect})"
     load(fpath)
+  end
+end
+
+desc "retrieve scripts from README.txt"
+task :retrieve do
+  mkdir 'tmp' unless File.directory?('tmp')
+  mkdir 'tmp/readme.d' unless File.directory?('tmp/readme.d')
+  sh "retrieve -d tmp/readme.d README.txt"
+end
+
+desc "retrieve test scripts and execute them"
+task :test2 => :retrieve do
+  Dir.glob('tmp/readme.d/*').each do |fpath|
+    sh "ruby -I lib #{fpath}"
   end
 end
