--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Oktest.js",
+  "name": "oktest",
   "description": "a new-style testing library for node.js",
   "version": "0.0.1",
+  "tags": ["test", "testing", "mock"],
   "homepage": "https://bitbucket.org/kwatch/oktest/src/tip/javascript/",
   "repository": {
     "type": "mercurial",
     "url": "https://bitbucket.org/kwatch/oktest/"
   },
   "author": "Makoto Kuwata <kwa@kuwata-lab.com>",
-  "main": "oktest",
+  "main": "./lib/oktest.js",
   "directories": {
     "lib": "./lib",
     "test": "./test",
@@ -21,6 +22,8 @@
   "engines": {
     "node": "*"
   },
-  "dependencies": ["cmdopt"],
-  "devDependencies": []
+  "dependencies": {
+    "cmdopt": ">= 0.0.1"
+  },
+  "devDependencies": {}
 }
