javascript: change to use 'lib/oktest.js' as bin script

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -13,11 +13,10 @@
   "directories": {
     "lib": "./lib",
     "test": "./test",
-    "doc": "./doc",
-    "bin": "./bin"
+    "doc": "./doc"
   },
   "bin": {
-    "oktest.js": "./bin/oktest.js"
+    "oktest.js": "./lib/oktest.js"
   },
   "engines": {
     "node": "*"
