--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.txt MIT-LICENSE MANIFEST CHANGES.txt setup.py
+include README.txt MIT-LICENSE CHANGES.txt setup.py MANIFEST MANIFEST.in
 include lib/oktest.py
 include test/*.py
 include Kookbook.py
